# onlyfans-dl-2

./: .gitignore  README.md  of-downloader.spec  onlyfans-dl.py  pyproject.toml  run_script.sh  session_vars.py  session_vars.sample.json  session_vars_sample.py
.github/workflows/: ci.yaml
src/: main.py  of-downloader.spec  ofapi.py  ofdb.py  ofdownloader.py  parse_tags.py  requirements.txt  sync_db_to_stash.py  util.py  windows_metadata.py
src/api/: strategy.py
src/graphql/: allTags.gql  destroyTag.gql  findScenes.gql  findTags.gql  jobQueue.gql  metadataAutoTag.gql  metadataScan.gql  sceneUpdate.gql  tagCreate.gql
src/models/: base_content.py  dynamicrule.py  media.py  messages.py  mpd.py  post.py  post_sql.py  profile.py  purchase.py  stories.py  subscriptions.py
src/sql/: dlc_table.sql  dlc_trigger.sql  dlf_table.sql  dlf_trigger.sql  insert_sql_c.sql  insert_sql_f.sql
tests/: test_ofapi.py  test_ofdb.py  test_util.py
tests/api/: test_strategy.py
tests/data/: pssh.mpd
