[tool.poetry]
name = "of3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "^8.1.7"
loguru = "^0.7.1"
pydantic = "^2.3.0"
requests = "^2.31.0"
pycld2 = { url = "https://download.lfd.uci.edu/pythonlibs/archived/pycld2-0.41-cp310-cp310-win_amd64.whl", extras = [
    "tagging",
], platform = "win32" }
pywin32 = { version = "^306", extras = ["tagging"], platform = "win32" }
rake-nltk = { version = "^1.0.6", extras = ["tagging"], platform = "win32" }
api-client = "^1.3.1"
pyinstaller-hooks-contrib = "^2023.8"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
mypy = "^1.5.1"
mypy-extensions = "^1.0.0"
types-pywin32 = "^306.0.0.4"
ruff = "^0.0.292"
pyinstaller = "^5.13.2"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.distutils.build_exe]
excludes = ["tkinter", "unittest"]
zip_include_packages = ["encodings"]

[tool.ruff]
# Same as Black.
line-length = 119
